--- a/8-queens/8-queens.vcxproj
+++ b/8-queens/8-queens.vcxproj
@@ -149,10 +149,13 @@
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
+    <ClInclude Include="BeamSearch.h" />
     <ClInclude Include="ChessBoard.h" />
     <ClInclude Include="Figure.h" />
+    <ClInclude Include="GlobalThreats.h" />
     <ClInclude Include="HelpScreen.h" />
     <ClInclude Include="Heuristic.h" />
+    <ClInclude Include="LocalThreats.h" />
     <ClInclude Include="MenuScreen.h" />
     <ClInclude Include="olcPixelGameEngine.h" />
     <ClInclude Include="Solver.h" />
