--- a/8-queens/8-queens.vcxproj.filters
+++ b/8-queens/8-queens.vcxproj.filters
@@ -48,6 +48,9 @@
     <ClInclude Include="MenuScreen.h">
       <Filter>Header Files</Filter>
     </ClInclude>
+    <ClInclude Include="TabuSearch.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="main.cpp">
